--- a/config/database.yml
+++ b/config/database.yml
@@ -21,9 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  pool: 5
-  timeout: 5000
-  database: familytree_production
-  user: root
-  password: password
+  <<: *default
+  database: db/production.sqlite3
